ninjam-server/ninjam.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ninjam-server
  namespace: ninjam
  labels:
    app: ninjam-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ninjam-server
  template:
    metadata:
      labels:
        app: ninjam-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
      containers:
        - name: ninjam-server
          image: zfigz/ninjam-server:v0.0.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /usr/local/ninjam/config.cfg
              subPath: config.cfg
            - name: session-volume
              mountPath: /usr/local/ninjam/sessions
              subPath: sessions
          ports:
            - containerPort: 2050
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config-volume
          configMap:
            name: ninjam-server
        - name: session-volume
          persistentVolumeClaim:
            claimName: ninjam-server
      nodeSelector:
        kubernetes.io/arch: arm64
