ninjam-server/ninjam.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ninjam
  name: ninjam-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
    - hosts:
        - "${NINJAM_HOST}"
      secretName: ninjam-cert
  rules:
    - host: "${NINJAM_HOST}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ninjam-server
                port:
                  number: 2050
